# r1cs-rollup

./: README.md
merkletree/: Cargo.toml
merkletree/src/: lib.rs
rollup/: Cargo.toml
rollup/src/: account.rs  ledger.rs  rollup.rs  transaction.rs
simplepaymentscp/: Cargo.toml
simplepaymentscp/src/: account.rs  ledger.rs  lib.rs  serde_utils.rs  transaction.rs
simplepaymentscp/src/commitment/: constraints.rs  mod.rs
simplepaymentscp/src/commitment/blake2s/: constraints.rs  mod.rs
simplepaymentscp/src/signature/: constraints.rs  mod.rs
simplepaymentscp/src/signature/schnorr/: constraints.rs  mod.rs
